--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,52 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    <!--<parent>-->
+        <!--<groupId>org.springframework.boot</groupId>-->
+        <!--<artifactId>spring-boot-starter-parent</artifactId>-->
+        <!--<version>1.5.2.RELEASE</version>-->
+    <!--</parent>-->
     <groupId>groupId</groupId>
     <artifactId>java-note</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
-    
+    <modules>
+        <module>dubbo</module>
+        <module>jdk</module>
+        <module>spring</module>
+        <module>rocketmq</module>
+        <module>zookeeper</module>
+        <module>sentinel</module>
+    </modules>
+
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <env>dev</env>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
+            <id>daily</id>
+            <properties>
+                <env>daily</env>
+            </properties>
+        </profile>
+        <profile>
+            <id>pre</id>
+            <properties>
+                <env>pre</env>
+            </properties>
+        </profile>
+        <profile>
+            <id>publish</id>
+            <properties>
+                <env>publish</env>
+            </properties>
+        </profile>
+    </profiles>
 </project>
