--- a/sentinel/pom.xml
+++ b/sentinel/pom.xml
@@ -50,6 +50,11 @@
             <artifactId>sentinel-transport-simple-http</artifactId>
             <version>1.4.1</version>
         </dependency>
+        <dependency>
+            <groupId>groupId</groupId>
+            <artifactId>dubbo</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
