--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <!--<artifactId>spring-boot-starter-parent</artifactId>-->
         <!--<version>1.5.2.RELEASE</version>-->
     <!--</parent>-->
-    <groupId>groupId</groupId>
+    <groupId>com.momo</groupId>
     <artifactId>java-note</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
@@ -20,6 +20,7 @@
         <module>rocketmq</module>
         <module>zookeeper</module>
         <module>sentinel</module>
+        <module>tools</module>
     </modules>
 
     <profiles>
