--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.momo</groupId>
-    <artifactId>rocketmq</artifactId>
+    <artifactId>tools</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
