--- a/sentinel/pom.xml
+++ b/sentinel/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.momo</groupId>
     <artifactId>sentinel</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>demo</name>
+    <name>sentinel</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -72,7 +72,7 @@
             <version>1.4.1</version>
         </dependency>
         <dependency>
-            <groupId>groupId</groupId>
+            <groupId>com.momo</groupId>
             <artifactId>dubbo</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
